CAG-296 Forward CAG instructions from proxied InitializeResult (#376)
* MCP-432 Pin CAG 0.8.0.355

* Forward proxied servers' InitializeResult.instructions instead of bundling them

The CAG nudge text was previously bundled in src/main/resources/proxied-mcp-servers.json
and appended at startup via ProxiedToolsLoader.composeInstructions. This coupled
instruction content and release cadence to this repo even though the CAG team owns
the tools, and shipped instructions even when the CAG binary failed to launch or
disabled tool families at runtime.

Switch to forwarding what each proxied server reports in its MCP InitializeResult.
McpClientManager now captures the per-server instructions string at connect time
and exposes them via getProxiedInstructions(). ProxiedToolsLoader.composeInstructions
now takes the runtime list instead of static configs. The 'instructions' field is
removed from proxied-mcp-servers.json, ProxiedMcpServerConfig, and the JSON DTO.
The cag-instructions.md test fixture is no longer needed.

Must merge AFTER CAG-296 ships in sonar-context-augmentation, so the binary returns
its own instructions in the initialize response.

* Update ProxiedServerConfigParserTest.java

* Cover proxied instructions forwarding with unit and medium tests

* Verify forwarded CAG instructions in proxied server IT

Add a log line in loadProxiedServerTools so the existing testcontainers
IT can assert that the bundled CAG binary's InitializeResult.instructions
were forwarded. Drop the now-stale comment about the removed positive
unit test.

* Log forwarded proxied instructions content at DEBUG level

* Log forwarded instructions at DEBUG with parameterized format

* Cover parameterized debug overload in McpLogger

---------

Co-authored-by: kornel.kotan <kornel.kotan@sonarsource.com>