@@ -16,9 +16,9 @@
  */
 package org.sonarsource.sonarqube.mcp.client;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
 import org.junit.jupiter.api.Test;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -28,63 +28,54 @@ class ProxiedToolsLoaderInstructionsTest {
   private static final String BASE_INSTRUCTIONS = "Base instructions for SonarQube MCP Server.";
 
   @Test
-  void composeInstructions_should_return_base_when_no_proxied_servers() {
+  void composeInstructions_should_return_base_when_no_proxied_instructions() {
     var composed = ProxiedToolsLoader.composeInstructions(BASE_INSTRUCTIONS, List.of());
 
     assertThat(composed).isEqualTo(BASE_INSTRUCTIONS);
   }
 
   @Test
-  void composeInstructions_should_return_base_when_provider_has_no_instructions() {
-    var config = new ProxiedMcpServerConfig("test", "cmd", List.of(), Map.of(), List.of(), Set.of(TransportMode.STDIO), null);
-
-    var composed = ProxiedToolsLoader.composeInstructions(BASE_INSTRUCTIONS, List.of(config));
+  void composeInstructions_should_skip_blank_proxied_instructions() {
+    var composed = ProxiedToolsLoader.composeInstructions(BASE_INSTRUCTIONS, List.of("   "));
 
     assertThat(composed).isEqualTo(BASE_INSTRUCTIONS);
   }
 
   @Test
-  void composeInstructions_should_return_base_when_provider_has_blank_instructions() {
-    var config = new ProxiedMcpServerConfig("test", "cmd", List.of(), Map.of(), List.of(), Set.of(TransportMode.STDIO), "   ");
-
-    var composed = ProxiedToolsLoader.composeInstructions(BASE_INSTRUCTIONS, List.of(config));
+  void composeInstructions_should_skip_null_proxied_instructions() {
+    var composed = ProxiedToolsLoader.composeInstructions(BASE_INSTRUCTIONS, Collections.singletonList(null));
 
     assertThat(composed).isEqualTo(BASE_INSTRUCTIONS);
   }
 
   @Test
-  void composeInstructions_should_append_provider_instructions() {
-    var config = new ProxiedMcpServerConfig("code-context", "cmd", List.of(), Map.of(), List.of(), Set.of(TransportMode.STDIO),
-      "Use context_get_context before analyzing code.");
-
-    var composed = ProxiedToolsLoader.composeInstructions(BASE_INSTRUCTIONS, List.of(config));
+  void composeInstructions_should_append_single_proxied_instruction() {
+    var composed = ProxiedToolsLoader.composeInstructions(BASE_INSTRUCTIONS,
+      List.of("Use context_get_context before analyzing code."));
 
     assertThat(composed).isEqualTo(BASE_INSTRUCTIONS + "\n\nUse context_get_context before analyzing code.");
   }
 
   @Test
-  void composeInstructions_should_append_multiple_proxied_servers() {
-    var config1 = new ProxiedMcpServerConfig("code-context", "cmd", List.of(), Map.of(), List.of(), Set.of(TransportMode.STDIO),
-      "Use context tools for code analysis.");
-    var config2 = new ProxiedMcpServerConfig("security", "cmd", List.of(), Map.of(), List.of(), Set.of(TransportMode.STDIO),
-      "Use security tools for vulnerability scanning.");
+  void composeInstructions_should_append_multiple_proxied_instructions_in_order() {
+    var composed = ProxiedToolsLoader.composeInstructions(BASE_INSTRUCTIONS, List.of(
+      "Use context tools for code analysis.",
+      "Use security tools for vulnerability scanning."
+    ));
 
-    var composed = ProxiedToolsLoader.composeInstructions(BASE_INSTRUCTIONS, List.of(config1, config2));
-
-    assertThat(composed).isEqualTo(BASE_INSTRUCTIONS + "\n\nUse context tools for code analysis.\n\nUse security tools for vulnerability scanning.");
+    assertThat(composed).isEqualTo(
+      BASE_INSTRUCTIONS + "\n\nUse context tools for code analysis.\n\nUse security tools for vulnerability scanning.");
   }
 
   @Test
-  void composeInstructions_should_skip_proxied_servers_without_instructions() {
-    var config1 = new ProxiedMcpServerConfig("provider1", "cmd", List.of(), Map.of(), List.of(), Set.of(TransportMode.STDIO),
-      "Provider 1 instructions.");
-    var config2 = new ProxiedMcpServerConfig("provider2", "cmd", List.of(), Map.of(), List.of(), Set.of(TransportMode.STDIO), null);
-    var config3 = new ProxiedMcpServerConfig("provider3", "cmd", List.of(), Map.of(), List.of(), Set.of(TransportMode.STDIO),
-      "Provider 3 instructions.");
-
-    var composed = ProxiedToolsLoader.composeInstructions(BASE_INSTRUCTIONS, List.of(config1, config2, config3));
+  void composeInstructions_should_skip_blank_entries_in_mixed_list() {
+    var composed = ProxiedToolsLoader.composeInstructions(BASE_INSTRUCTIONS, Arrays.asList(
+      "Provider 1 instructions.",
+      null,
+      "   ",
+      "Provider 3 instructions."
+    ));
 
     assertThat(composed).isEqualTo(BASE_INSTRUCTIONS + "\n\nProvider 1 instructions.\n\nProvider 3 instructions.");
   }
-
 }
